# Smart-Toaster

./: CMakeLists.txt  Smart-Toaster.c
src/: CMakeLists.txt  Smart-Toaster.c  lcd.c
